--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ asyncpraw = "^7.7.0"
 aiostream = "^0.4.5"
 jsonlines = "^3.1.0"
 prettyprint = "^0.1.5"
+sentence-transformers = "^2.2.2"
+torch = "^2.0.0"
+asyncprawcore = "^2.3.0"
 
 [tool.poetry.dev-dependencies]
 debugpy = "^1.6.2"
